[package]
name = "mowojang"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
uuid = { version = "1", features = ["serde"] }
urlencoding = "2.1"
tokio = "1"
serde = { version = "1.0", features = ["derive"] }
